--- a/login.html
+++ b/login.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>MyGitHub</title>
+	<title>Login</title>
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	GitHub
+	Login Form
 </body>
 </html>
